# esp32-spdlog

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/spdlog/: 0001-patches-for-idf.patch  CMakeLists.txt
components/spdlog/spdlog/: tweakme.h
components/spdlog/spdlog/details/: os-inl.h
main/: CMakeLists.txt  main.cpp
